--- a/pedido-comida/package.json
+++ b/pedido-comida/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
