--- a/pedido-comida/package.json
+++ b/pedido-comida/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.19",
     "core-js": "^3.8.3",
     "postcss": "^8.4.38",
+    "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0"
